<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_ILK" Id="{21709cf7-f577-4665-94fd-fe0531e0ad62}">
    <Declaration><![CDATA[VAR_GLOBAL
	
//MPS
	{attribute 'pytmc' := '
    pv: PLC:KFE:GATT:FFO:01
    '}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[=+-ES2202_00_07]^Channel 1^Output'}
    g_FastFaultOutput1  :   FB_HardwareFFOutput;
	
	{attribute 'pytmc' := '
    pv: PLC:KFE:GATT:FFO:02
    '}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[=+-ES2202_00_07]^Channel 2^Output'}
    g_FastFaultOutput2  :   FB_HardwareFFOutput;
	
	{attribute 'pytmc' := ' 
     pv: PLC:KFE:GATT:FF_RESET;
	 field: ZNAM FALSE; 
	 field: ONAM TRUE; 
	 io: io;
    '}
    xFastFaultReset :   BOOL;
	{attribute 'pytmc' := '
    pv: PLC:KFE:GATT:ARB:01
    '}
	fbArbiter1   :   FB_Arbiter(1);
	{attribute 'pytmc' := '
    pv: PLC:KFE:GATT:ARB:02
    '}
	fbArbiter2   :   FB_Arbiter(2);
	
	{attribute 'pytmc' := 'pv: AT1K0:GAS:AUTO_ON ;
 	field: ZNAM Override OFF; 
	field: ONAM Override ON; 
	 io: io;'}
	xAutoOnMode	:	BOOL; 

    {attribute 'TcLinkTo' := ':=TIIB[PMPS_PRE]^IO Inputs^Requested Transmission'}
	Req_Trans AT%I*: ST_PMPS_Attenuator_IO;
	 {attribute 'TcLinkTo' := ':=TIIB[PMPS_PRE]^IO Outputs^Current_Transmission'}
	Cur_Trans AT%Q*: ST_PMPS_Attenuator_IO;
	{attribute 'pytmc' := '
    pv: AT1K0:GAS:PhotonEnergy
    '}
    {attribute 'TcLinkTo' := ':=TIIB[PMPS_PRE]^IO Inputs^rPhotonEnergy'}
	rPhotonEnergy AT%I*: REAL;

	{attribute 'pytmc' := 'pv: AT1K0:GAS:VAC:OVRD_ON ;
 	field: ZNAM Override OFF; 
	field: ONAM Override ON; 
	 io: io;'}
	xSystemOverrideMode	:	BOOL; (* Global system override for the GATT*)

	
	//VRC ILK setpoints to OPEN
	{attribute 'pytmc' :=' pv: AT1K0:GAS:CNTRL:US:SP;
	field: HOPR 1000;
	field: LOPR 0;
	field: PREC 2;
	field: EGU "TORR";
	'}
	rVRC_US_SP :REAL; 
	
	{attribute 'pytmc' :=' pv: AT1K0:GAS:CNTRL:DS:SP;
	field: HOPR 1000;
	field: LOPR 0;
	field: PREC 2;
	field: EGU "TORR";
	'}
	rVRC_DS_SP :REAL; 
		
	
(* Interlock related bits, local to the PLC*)
	US_MAA_OK:  BOOL;
	US_Turbo_Valves_Open:  BOOL;
	DS_MAA_OK: BOOL;
	DS_Turbo_Valves_Open:  BOOL;
	US_Turbo_Running:  BOOL;
	DS_Turbo_Running:  BOOL;
	TwinscrewPumps_Valves_Closed: BOOL;
	US_Roughing_Valves_Open : BOOL;
	DS_Roughing_Valves_Open : BOOL;
	US_Aperture_Closed: BOOL;
	DS_Aperture_Closed: BOOL;
	
	xUSAperturesOpnOK : BOOL;
	xDSAperturesOpnOK : BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>